# road-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
TwinLiteNet/: requirements.txt
datasets/: Datasets_Tutorial.ipynb  Huggingface_dataset_tutorial.ipynb
deployment/: .dockerignore  Dockerfile  app.py  docker-compose.yml  requirements.txt
model/: fine-tuned-model.pth
proposal/annotations/: p_image_1.json  p_image_1_ll.json  p_image_2_ll.json  p_image_3_da.json  p_image_3_ll.json
proposal/annotations/p_image_1_json/: label_names.txt
proposal/word file/: TwinLiteNet.docx  ~$inLiteNet.docx
stable_diffusion/: stable_diffusion.ipynb
submissions/: Update_1.ipynb
submissions/Content/: Class-Presentation.pptx
submissions/Deployment/: Readme.md  Readme.txt
submissions/Final Submission/: Building and Training Mini Network.ipynb  Transfer Learning and Deployment.ipynb
submissions/Update 1/: Description of Dataset.docx  Update_1.ipynb
submissions/Update 2/: Report.docx  Update_2.ipynb  Update_2_with_test.ipynb
submissions/final-submission/: final_submission.ipynb
submissions/proposal/annotations/: p_image_1_da.json  p_image_2_da.json
submissions/proposal/annotations/p_image_1_ll_json/: label_names.txt
submissions/proposal/annotations/p_image_3_da_json/: label_names.txt
