[tool.poetry]
name = "lane-detection"
version = "0.1.0"
description = ""
authors = ["Bal Narendra Sapa <bnsapa2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
labelme = "^5.3.1"
pyqt5 = "^5.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
